feat: dnd gesture recognition